test/vm/errors/compiler/module_not_found.ach
// Compiler error: import of non-existent module
// Expected: module not found error

import "this_file_does_not_exist.ach" as ghost
